Update icons and text in surprise message

--- a/index.html
+++ b/index.html
@@ -380,10 +380,10 @@
         <div id="surprise" class="hidden-message">
             <h3>I love ya a lottt. 😙💕</h3>
             <p>
-                <i class="fas fa-coffee"></i> Ya voiceeeee. 🥹💗<br>
+                <i class="fas fa-music"></i> Ya voiceeeee. 🥹💗<br>
                 <i class="fas fa-sun"></i> Ya personality. 💕😌<br>
-                <i class="fas fa-music"></i> Ya smileeeee. 🤭💞<br>
-                <i class="fas fa-camera"></i>Every momentwe spent were the best of my lifeeeee. 😩💓<br>
+                <i class="fas fa-face"></i> Ya smileeeee. 🤭💞<br>
+                <i class="fas fa-camera"></i>Every moment we spent were the best of my lifeeeee. 😩💓<br>
                 <i class="fas fa-infinity"></i> Words could ever express my love for ya rnnn. 😖❤️‍🩹
             </p>
             <p>💕 Ya my everything, forever and always 💕</p>
