Update photo placeholders and smile icon

--- a/index.html
+++ b/index.html
@@ -356,9 +356,9 @@
         
         <div class="photos">
             <!-- REPLACE THESE with your actual photos -->
-            <div class="photo-placeholder" onclick="this.innerHTML='📸'">I</div>
-            <div class="photo-placeholder" onclick="this.innerHTML='📸'">L</div>
-            <div class="photo-placeholder" onclick="this.innerHTML='📸'">UUUU.😙💕</div>
+            <div class="photo-placeholder" onclick="this.innerHTML='💕'">I</div>
+            <div class="photo-placeholder" onclick="this.innerHTML='💕'">L</div>
+            <div class="photo-placeholder" onclick="this.innerHTML='💕'">UUUU.😙💕</div>
         </div>
         
         <!-- CUSTOMIZE this message -->
@@ -382,7 +382,7 @@
             <p>
                 <i class="fas fa-music"></i> Ya voiceeeee. 🥹💗<br>
                 <i class="fas fa-sun"></i> Ya personality. 💕😌<br>
-                <i class="fas fa-face"></i> Ya smileeeee. 🤭💞<br>
+                <i class="fas fa-smile"></i> Ya smileeeee. 🤭💞<br>
                 <i class="fas fa-camera"></i>Every moment we spent were the best of my lifeeeee. 😩💓<br>
                 <i class="fas fa-infinity"></i> Words could ever express my love for ya rnnn. 😖❤️‍🩹
             </p>
