Change placeholder hearts to healing hearts

--- a/index.html
+++ b/index.html
@@ -356,9 +356,9 @@
         
         <div class="photos">
             <!-- REPLACE THESE with your actual photos -->
-            <div class="photo-placeholder" onclick="this.innerHTML='💕'">I</div>
-            <div class="photo-placeholder" onclick="this.innerHTML='💕'">L</div>
-            <div class="photo-placeholder" onclick="this.innerHTML='💕'">UUUU.😙💕</div>
+            <div class="photo-placeholder" onclick="this.innerHTML='❤️‍🩹'">I</div>
+            <div class="photo-placeholder" onclick="this.innerHTML='❤️‍🩹'">L</div>
+            <div class="photo-placeholder" onclick="this.innerHTML='❤️‍🩹'">UUUU.😙💕</div>
         </div>
         
         <!-- CUSTOMIZE this message -->
