--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
         
         <button onclick="revealMessage()">
             <i class="fas fa-heart" style="margin-right: 10px;"></i>
-            Click for a Surpwiseeeeee
+            Click me to see smth beautiful. 🤭
             <i class="fas fa-heart" style="margin-left: 10px;"></i>
         </button>
         
